appId: com.google.android.deskclock
---
- launchApp:
    clearState: true
    
- assertVisible: "Stopwatch"
- tapOn:
    id: "com.google.android.deskclock:id/navigation_bar_item_icon_view"
    index: 3
- assertVisible: "Start"
- tapOn: "Start"
